# perovsat-app

./: .clang-format  .editorconfig  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Kconfig  README.md  dbuild.yml  dbuild_devices.conf  prj.conf  setup.sh  west.yml
boards/: nucleo_u575zi_q.overlay
dbuild/: README.md  device_map.yml  west-commands.yml
dbuild/west_commands/: dbuild.py  test_dbuild.py
drivers/imu/: CMakeLists.txt  Kconfig  mpu6050_mock.c
dts/bindings/: perovsat,mpu6050-mock.yaml  vendor-prefixes.txt
include/: payload.hpp  threads.hpp  watchdog.hpp
snippets/amu-hardware/: amu-hardware.conf  snippet.yml
snippets/amu-library-mock/: amu-library-mock.conf  snippet.yml
snippets/amu-public-mock/: amu-public-mock.overlay  snippet.yml
snippets/eyestar-public-mock/: eyestar-public-mock.conf  eyestar-public-mock.overlay  snippet.yml
snippets/hw-imu/: hw-imu.conf  snippet.yml
snippets/imu-emul/: imu-emul.conf  snippet.yml
snippets/imu-hw/: snippet.yml
snippets/imu-mock/: imu-mock.overlay  snippet.yml
snippets/mock/: mock.conf  mock.overlay  snippet.yml
snippets/mpu6050-emul/: mpu6050-emul.conf  snippet.yml
snippets/mpu6050-hardware/: mpu6050-hardware.conf  snippet.yml
snippets/mpu6050-hw/: mpu6050-hw.conf  snippet.yml
snippets/mpu6050-library-mock/: snippet.yml
snippets/mpu6050-mock/: mpu6050-mock.conf  mpu6050-mock.overlay  snippet.yml
snippets/mpu6050-public-mock/: mpu6050-public-mock.overlay  snippet.yml
src/: commands.cpp  communications.cpp  dfa.cpp  payload.cpp  system_health.cpp  watchdog.cpp
(+9 files in other folders)
